l'ajout des images

--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -9,6 +9,7 @@
         <div class="container  ">
             <h1>{{ ad.title }}</h1>
             <p> {{ ad.introduction }}</p>
+            <P> {{ ad.price }} Euros</P>
         </div>
     </div>
     <div class="container my-4">
