--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -1,7 +1,9 @@
 {% extends "base.html.twig" %}
 
 {% block title %} Création d'une annonce {% endblock %}
-{% form_theme form _self %}
+
+{% form_theme form 'ad/_collection.html.twig' %}
+
 {% block body %}
     <div class="container">
         <h1> Créer une annonce</h1>
@@ -14,46 +16,7 @@
     </div>
 {% endblock %}
 
-{% block _ad_images_widget %}
-    <p> ajouter vos  images</p>
 
-    {{ form_widget(form) }}
-
-    <input type="hidden" id="widgets-counter" value="0">
-
-    <div class="form-group">
-        <button type="button" id="add-image" class="btn btn-danger">Ajouter une image</button>
-    </div>
-
-{% endblock %}
-
-{% block _ad_images_entry_row %}
-    {{ form_widget(form) }}
-
-{% endblock %}
-
-{% block _ad_images_entry_widget %}
-    <div class="form-group" id="block_{{ id }}">
-        <div class="row">
-            <div class="col-10">
-                <div class="row">
-                    <div class="col">
-                        {{ form_widget(form.url) }}
-                    </div>
-                    <div class="col">
-                        {{ form_widget(form.caption) }}
-                    </div>
-                </div>
-            </div>
-            <div class="col-2">
-                <button type="button" data-action="delete" data-target="#block_{{ id }}" class="btn btn-danger"> X </button>
-
-            </div>
-        </div>
-
-
-    </div>
-{% endblock %}
 {% block javascripts %}
     <script>
 
