--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -14,6 +14,30 @@
                 <a class="nav-link" href="{{ path('ads_index')}}">Liste d'articles</a>
             </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+            {% if app.user %}
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
+                        <img src="{{ app.user.picture }}" class="avatar-mini" alt="{{ app.user.fullName }}"> {{ app.user.fullName }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+                        <a href="{{ path('ads_create') }}" class="dropdown-item">créer une annonce</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_index') }}" class="dropdown-item">Modifier mon compte</a>
+                        <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
+                        <a href="{{ path('account_logout') }}" class="dropdown-item">Me déconnecter</a>
+                    </div>
+                </li>
+
+            {% else %}
+                <li class="nav-item">
+                    <a href="{{ path('account_login') }}" class="nav-link">Connexion</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('account_register') }}" class="nav-link">Inscription</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
 {% for label, messages in app.flashes %}
