sécurité acces par role

--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -2,7 +2,7 @@
 <div class="col-md-4">
     <div class="card text-white bg-warning mb-3 "  style="max-width: 20rem;">
         <div class="card-header">{{ ad.title }}</div>
-        <div class="card-body">
+        <div class="card-body">a
             <a href="{{ url }}">
                 <h4 class="card-title">{{ ad.price }} euros</h4>
             </a>
