--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -7,7 +7,7 @@
         <h1 class="my-4"> Voici la liste</h1>
         <div class="row m-5">
             {% for ad in ads %}
-                {% include '_ad.html.twig' %}
+                {% include 'ad/_ad.html.twig' %}
             {% endfor %}
         </div>
     </div>
