--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-3 my-3">
+            <div class="col-sm-3 my-3">
                 <img src="{{ user.picture }}" alt="avatar de {{ user.fullName }}">
                 <br>
                 <spa class="badge badge-secondary">{{ user.ads| length }} annonces</spa>
             </div>
-            <div class="col-9 mt-5">
+            <div class="col-sm-9 mt-5">
                 <h1>{{ user.fullname }} </h1>
                 {% if user is same as (app.user) %}
                     <div class="mt-3">
