--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -23,6 +23,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                         <a href="{{ path('ads_create') }}" class="dropdown-item">créer une annonce</a>
                         <div class="dropdown-divider"></div>
+                        <a href="{{ path('user_show', {'slug': app.user.slug})  }}" class="dropdown-item">Mon compte</a>
                         <a href="{{ path('account_index') }}" class="dropdown-item">Modifier mon compte</a>
                         <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
                         <a href="{{ path('account_logout') }}" class="dropdown-item">Me déconnecter</a>
