--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -25,6 +25,7 @@
                         <div class="dropdown-divider"></div>
                         <a href="{{ path('user_show', {'slug': app.user.slug})  }}" class="dropdown-item">Mon compte</a>
                         <a href="{{ path('account_index') }}" class="dropdown-item">Modifier mon compte</a>
+                        <a href="{{ path('account_bookings') }}" class="dropdown-item">Mes réservations</a>
                         <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
                         <a href="{{ path('account_logout') }}" class="dropdown-item">Me déconnecter</a>
                     </div>
