--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -17,24 +17,27 @@
     <div class="alert light container">
         <h2>vos dates?</h2>
         <div class="row">
-            <div class="col">
+            <div class="col dateStart">
                 {{ form_row(form.startDate) }}
             </div>
             <div class="col">
                 {{ form_row(form.endDate) }}
             </div>
         </div>
-        <h4>montant : <span id="amount">...</span>&euro;</h4>
+        <h4 class="mt-3">montant : <span id="amount">...</span>&euro;</h4>
         <span id="days">0</span> nuit(s) à {{ ad.price }}/ nuit
 
         <h2>Quelque chose a dire?</h2>
         {{ form_row(form) }}
+    </div>
+    <div class="container">
         <h2> listo!</h2>
 
         <button type="submit" class="btn bg-success">reservez</button>
         {{ form_end(form) }}
-
     </div>
+
+
 {% endblock %}
 
 {% block javascripts %}
@@ -42,10 +45,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.fr.min.js" integrity="sha512-fx3aztaUjb4NyoD+Tso5g7R1l29bU3jnnTfNRKBiY9fdQOHzVhKJ10wEAgQ1zM/WXCzB9bnVryHD1M40775Tsw==" crossorigin="anonymous"></script>
 
     <script>
+        $(document).ready(function calculateAmount(){
+                //les dates
+                const endDate =  new Date($('#booking_endDate').val());
+                const starDate =  new Date($('#booking_startDate').val());
+                if (starDate && endDate && starDate < endDate ){
+                    const DAY_TIME = 24 * 60 * 60 * 1000;
+                    const interval = endDate.getTime() - starDate.getTime();
+                    const days = interval/ DAY_TIME;
+                    const amount = days * {{ ad.price }};
 
-        $(document).ready(function (){
-            $('#booking_startDate, #booking_endDate').datepicker();
+                    $('#days').text(days);
+                    $('#amount').text(amount.toLocaleString('fr-FR'));
+                }
 
         })
+
     </script>
 {%  endblock %}
