function montant show

--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -45,7 +45,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.fr.min.js" integrity="sha512-fx3aztaUjb4NyoD+Tso5g7R1l29bU3jnnTfNRKBiY9fdQOHzVhKJ10wEAgQ1zM/WXCzB9bnVryHD1M40775Tsw==" crossorigin="anonymous"></script>
 
     <script>
-        $(document).ready(function calculateAmount(){
+        $(document).ready(function (){
                 //les dates
                 const endDate =  new Date($('#booking_endDate').val());
                 const starDate =  new Date($('#booking_startDate').val());
@@ -58,6 +58,7 @@
                     $('#days').text(days);
                     $('#amount').text(amount.toLocaleString('fr-FR'));
                 }
+                function caca()
 
         })
 
