--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+
         <title>{% block title %}Welcome!{% endblock %}</title>
         <script src="/build/private.bundle.js"></script>
+        <script src="https://kit.fontawesome.com/bef505d875.js" crossorigin="anonymous"></script>
 
         {% block stylesheets %}{% endblock %}
     </head>
