--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -41,7 +41,7 @@
                         <dt class="col-md-4">Montant Total</dt>
                         <dd class="col-md-8">{{ booking.amount }} &euro;</dd>
                         <dt class="col-md-4">Commentaire</dt>
-                        <dd class="col-md-8">{{ booking.comment }}</dd>
+                        <dd class="col-md-8">{{ booking.comment | default('nada') }}</dd>
                     </dl>
                     <hr>
 
@@ -59,6 +59,25 @@
                         </div>
                     </div>
                 {{ author.description|raw}}
+                </div>
+                <div class="alert alert-light">
+                    <h2 class="alert-heading">Votre avis compte !</h2>
+                    {% if date() > date(booking.endDate) %}
+                       {% set comment = booking.ad.commentFromAuthor(app.user) %}
+                        {% if  comment is not null %}
+                            <blockquote>
+                            {{ comment.content }}
+                            </blockquote>
+                            <strong> Note: </strong> {% include 'partials/rating.html.twig' with {'rating': comment.rating} %}
+                        {%else  %}
+                            {{ form_start(form) }}
+                            {{ form_widget(form) }}
+                            <button type="submit" class="btn btn-success">Confirmer</button>
+                            {{ form_end(form) }}
+                        {% endif %}
+                    {% else %}
+                      On peut pas noter avant la fin du voyage
+                    {% endif %}
                 </div>
             </div>
             <div class="col">
