--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -14,6 +14,17 @@
             <div class="col-4">
                 <img src="{{ booking.ad.coverImage }}" alt="foto" class="img-fluid">
             </div>
+
+            <div class="mt-3">
+                {% set comment = booking.ad.commentFromAuthor(app.user) %}
+                {% if comment is not null %}
+                    <strong>Note donnée : </strong> {% include 'partials/rating.html.twig' with {'rating' : comment.rating} %}
+                {% else %}
+                    Vous n'avez pas encore donné de note.
+                    <a href="{{ path('booking_show', {'id': booking.id}) }}#comment">L'avis</a>
+                {% endif %}
+
+            </div>
             <div class="col-8">
                 <h4>{{ booking.ad.title }}</h4>
                 <p>
