dashboard avec dql

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,9 @@
 @import "~bootstrap";
+@import "bootstrap.css";
+@import "bootswatch";
+@import "variables";
+
+
 
 .avatar-mini{
   max-width: 24px;
