--- a/templates/admin/ad/edit.html.twig
+++ b/templates/admin/ad/edit.html.twig
@@ -2,9 +2,11 @@
 
 {% block title %} Modification {{ ad.id}} {% endblock %}
 
+{% form_theme form _self %}
+
 {% block body %}
     <div class="container">
-        <h1>Modification {{ ad.title }}</h1>
+        <h1 class="mt-4">Modification {{ ad.title }}</h1>
 
         {{ form_start(form) }}
 
@@ -92,5 +94,46 @@
 
     </div>
 
+
+{% endblock %}
+
+{% block _ad_images_widget %}
+        {{ form_widget(form) }}
+{% endblock %}
+
+{% block _ad_images_entry_row %}
+    <div id="block_{{ id }}">
+        {{ form_widget(form) }}
+    </div>
+{% endblock %}
+{% block _ad_images_entry_widget %}
+        <div class="row align-items-center">
+            <div class="col-4">
+            {% if value %}
+                <img src="{{ value.url }}" alt="img" class="img-fluid">
+            {% endif %}
+
+            </div>
+            <div class="col-6">
+                {{ form_row(form.caption) }}
+            </div>
+            <div class="col">
+                   <button class="btn btn-success" data-action="delete" data-target="#block_{{ id }}">
+                   <i class="fas fa-trash"></i>
+</button>
+            </div>
+        </div>
+{% endblock  %}
+{% block javascripts %}
+    <script >
+            $(document).ready(function() {
+                $('[data-action="delete"]').on('click', function(){
+                    const target = this.dataset.target;
+                   $(target).remove();
+
+                });
+
+            });
+    </script>
 
 {% endblock %}
