--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for ad in ads %}
+                {% for ad in pagination.data %}
                 <tr>
                     <td>{{ ad.id }}</td>
                     <td class="text-center">{{ ad.title }}</td>
@@ -39,5 +39,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
