--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -18,12 +18,12 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_bookings_index') }}">
                    <i class="fas fa-folder"></i> Réservations
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_comments_index') }}">
                    <i class="fas fa-comments"></i> Commentaires
                 </a>
             <li class="nav-item">
