--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -3,64 +3,128 @@
 {% block title %}Hello Dashboard!{% endblock %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <div class="card bg-primary text-white my-3 text-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-4">
-                            <i class="fas fa-user fa-3x"></i>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card bg-primary text-white my-3 text-center">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <i class="fas fa-user fa-3x"></i>
+                            </div>
+                            <div class="col-8">
+                                <h4 class="card-title"> {{ stats.users }} Users</h4>
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <h4 class="card-title"> {{ stats.users }} Users</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-dark text-white my-3 text-center">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <i class="fas fa-hotel fa-3x"></i>
+                            </div>
+                            <div class="col-8">
+                                <h4 class="card-title"> {{ stats.ads }}annonces </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-warning text-white my-3 text-center">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <i class="fas fa-folder fa-3x"></i>
+                            </div>
+                            <div class="col-8">
+                                <h4 class="card-title"> {{ stats.bookings }} Réservations </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-success text-white my-3 text-center">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <i class="fas fa-comments fa-3x"></i>
+                            </div>
+                            <div class="col-8">
+                                <h4 class="card-title"> {{ stats.comments }} avis </h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card bg-dark text-white my-3 text-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-4">
-                            <i class="fas fa-hotel fa-3x"></i>
-                        </div>
-                        <div class="col-8">
-                            <h4 class="card-title"> 50 annonces </h4>
-                        </div>
-                    </div>
+        <hr>
+        <div class="row">
+            <div class="col-6">
+                <div class="alert alert-success">
+                    <h2 class="alert-heading my-3"> <i class="fas fa-arrow-up"></i>Les annonces populaires</h2>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>Annonce</th>
+                            <th>Propio</th>
+                            <th>Moyenne</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for ad in bestAds %}
+                            <tr>
+                                <td>{{ ad.title }}</td>
+                                <td>
+                                    <img src="{{ ad.picture }}" alt="avatar" class="avatar avatar-mini">
+                                   {{ ad.fisrtName }}
+                                </td>
+                                <td class="text-center">
+                                    <span class="badge badge-dark">
+                                        {{ ad.note| number_format(1,",", " " ) }}
+                                    </span>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card bg-warning text-white my-3 text-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-4">
-                            <i class="fas fa-folder fa-3x"></i>
-                        </div>
-                        <div class="col-8">
-                            <h4 class="card-title"> 50 Réservations </h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card bg-success text-white my-3 text-center">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-4">
-                            <i class="fas fa-comments fa-3x"></i>
-                        </div>
-                        <div class="col-8">
-                            <h4 class="card-title"> 250 avis </h4>
-                        </div>
-                    </div>
+            <div class="col">
+                <div class="alert alert-danger">
+                    <h2 class="alert-heading my-3"> <i class="fas fa-arrow-down"></i>Les pires annonces !!!</h2>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>Annonce</th>
+                            <th>Propio</th>
+                            <th>Moyenne</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for ad in worstAds %}
+                            <tr>
+                                <td>{{ ad.title }}</td>
+                                <td>
+                                    <img src="{{ ad.picture }}" alt="avatar" class="avatar avatar-mini">
+                                    {{ ad.fisrtName }}
+                                </td>
+                                <td class="text-center">
+                                    <span class="badge badge-dark">
+                                        {{ ad.note| number_format(1,",", " " ) }}
+                                    </span>
+                                </td>
+                            </tr>
+                        {% endfor %}
+
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
